--- a/pom.xml
+++ b/pom.xml
@@ -8,10 +8,10 @@
 		<version>3.1.1</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.supermarket</groupId>
-	<artifactId>supermarket</artifactId>
+	<groupId>com.ifoodCaseiro</groupId>
+	<artifactId>Ifood-Caseiro</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>supermarket</name>
+	<name>Ifood-Caseiro</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
